--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *$py.class
 *.so
 .env
+.env.*
 .venv
 env/
 venv/
@@ -11,3 +12,7 @@ ENV/
 .idea/
 .vscode/
 *.log
+
+# Docker
+.docker/
+docker-compose.override.yml
